--- a/css/bookstyle.css
+++ b/css/bookstyle.css
@@ -7,36 +7,8 @@ body {
 	background: #fff;
 	-webkit-text-size-adjust: auto;
 }
-a{text-decoration: none;}
-a:link {color: black}     
-a:visited {color: black} 
-a:hover {color: red}    
-a:active {color: black}   
-#topOne{
-	width: 100%;
-	height: 35px;
-	background: #f7f7f7;
-	display: block;
-}
-#topOne .nav-link{
-	width: 90%;
-	margin: auto;
-	cursor: pointer;
-	height: 35px;
-        border-bottom: 1px solid #e5e5e5;
-}
-#topOne .nav-link a{
-	display: inline;
-	width: 60px;
-	height: 35px;
-	padding: 0 5px;
-	line-height: 35px;
-}
-#topOne .nav-link em{
-	height: 34px;
-	margin: 0 10px;
-        color: #d9d9d9;
-}
+a{text-decoration: none;transition:color 0.2s ease-in-out;}
+a:hover {color: red;}    
 .user{
 	height: 36px;
 	width: 120px;
@@ -67,7 +39,6 @@ a:active {color: black}
 	padding: 15px;
 	width: 50%;
 	margin: auto;
-	//background-color: rgb(246,241,231);
 }
 @media screen and (max-width:600px){
 #newbox{
