--- a/css/bookstyle.css
+++ b/css/bookstyle.css
@@ -7,7 +7,7 @@ body {
 	background: #fff;
 	-webkit-text-size-adjust: auto;
 }
-a{text-decoration: none;transition:color 0.2s ease-in-out;}
+a{color:black;text-decoration: none;transition:color 0.2s ease-in-out;}
 a:hover {color: red;}    
 .user{
 	height: 36px;
