--- a/css/bookstyle.css
+++ b/css/bookstyle.css
@@ -44,13 +44,13 @@ a:hover {color: red;}
 }
 @media screen and (max-width:600px){
 	#newbox{
-		width: 90%;
+		width: 450px;
 		margin:0 auto;
 	}
 }
 @media screen and (min-width:600px) and (max-width:960px){
 	#newbox{
-		width: 80%;
+		width: 800px;
 		margin:0 auto;
 	}
 }
