--- a/css/bookstyle.css
+++ b/css/bookstyle.css
@@ -69,7 +69,7 @@ a:hover {color: red;}
 }
 #qh h2{
 	text-align: center;
-	font-size:180%;
+	font-size:14px;
 	font-family: 宋体;
 }
 .Footer .footer_nav {
