--- a/css/style.css
+++ b/css/style.css
@@ -1,113 +1,186 @@
+@font-face {
+	font-family: 胡晓波男神体;
+	src: url('../font/HuXiaoBoNanShenTi-2.otf');
+}
 * {
-    margin:0;
-    padding:0;
+	margin:0;
+	padding:0;
+}
+a {
+	text-decoration:none;
 }
 #nav {
-    background-color:black;
-    width:100%;
-    height: 50px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 80px;
+    padding: 0 75px 0 95px;
+    box-sizing: border-box;
+    background-color: #fdfdfd;
+    box-shadow: 0 0 15px 2px rgba(0, 0, 0, 0.4);
+    z-index: 100;
+    backface-visibility: hidden;
 }
-#nav #h {
-    float:left;
-    padding-left:180px;
+.logo img {
+	width:80px;
+	padding-right:15px;
+	float:left;
 }
-#nav #link {
-    float:right;
-    margin-right:105px;
-    width:15%;
-    height: 50px;
+.logo h1 {
+	font-size: 25px;
+	font-family: 胡晓波男神体;
+	float:left;
+	line-height: 80px;
 }
-#nav #link a {
-    padding-right:5px;
+#search input {
+	float:right;
+	transition: 0.12s ease;
+	margin-top:25px;
+	margin-bottom: 25px;
+	outline-style: none;
+	border-radius: 42px;
+	border: 2px solid #2f4f4f;
+	width: 180px;
+	padding-left: 13px;
+	height: 30px;
 }
-#nav a {
-    color:white;
-    line-height: 50px;
-    transition:color 0.2s ease-in-out;
-    text-decoration: none;
+#search input:focus {
+	width:230px;
 }
-#nav a:hover {
-    color:#e44c65;
+#list {
+	position: fixed;
+	top: 59px;
+	right: 89px;
+	width:215px;
+	z-index: 100;
+	min-height:80px;
+	overflow-y:auto;
+	max-height:150px;
+	background-color: white;
+	border: 1px solid black;
+	border-top: 0px;
+	display: none;
 }
-#top {
-    margin:50px 0 0 150px;
+#list li {
+	list-style-type:none;
+	height: 30px;
+	overflow:hidden;
+	text-overflow:elipsis;
+	white-space:nowrap;
 }
-#top .left{
-    float: left;
-    width: 300px;
-    height: 327px;
-    background-color: #fcfcfa;
+#list li a {
+	text-indent:8px;
+	display: inline-block;
+	color:black;
+	font-size: 14px;
+	width:100%;
+	line-height: 30px;
+	background-color: white;
+	transition:background-color 0.1s ease-in-out;
 }
-#top div {
- 
+#list li a:hover {
+	background-color: grey;
 }
-.color1 {
-    background-color: #f7f6f2;
+#bookcase {
+	margin: 0 auto;
+	width:1120px;
+	padding:5px;
 }
-.color2 {
-    background-color: #fcfcfa;
+#bookt {
+	margin-top: 80px;
+	padding-top: 30px;
 }
-#top h4{
-    padding-top:10px;
-    text-indent: 1em;
-    padding-bottom: 5px;
+#hot {
+	width:760px;
+	float: left;
 }
-#top ul{
-    list-style-type: none;
+#hot h2 {
+	color: #666;
+	padding-left:10px;
 }
-#top li{
-    float:left;
-    padding-left:1em;
-    padding-bottom:8px;
+div.book {
+	margin-top: 25px;
+	width:320px;
+	height: 140px;
+	margin-right: 20px;
+	float: left;
 }
-#top a {
-    color:black;
-    transition:color 0.2s ease-in-out;
-    text-decoration: none;
+.book img{
+	width:105px;
+	height:140px;
+	float:left;
+	cursor: pointer;
 }
-#top a:hover {
-    color:#e44c65;
+.book a.name {
+	color:#1a1a1a;
+	font-size: 1.15em;
+	padding-top:-5px;
+	padding-left:16px;
+	font-weight: 520;
+	transition:color 0.2s ease-in-out;
+	cursor: pointer;
 }
-#top img {
-    float: left;
-    width:540px;
-    height: 327px;
+.book a.name:hover {
+	color:#e44c65;
 }
-#top .right{
-    float: left;
-    width: 300px;
-    height: 327px;
-    background-color: #f7f6f2;
+.book p.content {
+	text-indent: 2em;
+	color:#666;
+	overflow:hidden;
+	padding-left: 16px;
+	padding-top: 5px;
+	margin-bottom: 5px;
+	height: 84px;
 }
-#books {
-    margin:20px 0 20px 150px;
-    width:1140px;
-    height: 500px;
-    border: 1px solid black;
+.book a.kind {
+	color:#1a1a1a;
+	padding-left:16px;
+	padding-right:2px;
+	transition:color 0.2s ease-in-out;
 }
-#books .tui {
-    float: left;
-    margin:50px;
-    width:400px;
-    height: 250px;
+.book a.kind:hover {
+	color:#e44c65;
 }
-#books img {
-    float:left;
-    width:178px;
-    height: 248px;
+.book a.writer {
+	color:#1a1a1a;
+	padding-left:2px;
+	transition:color 0.2s ease-in-out;
 }
-#books h2 {
-    float:left;
-    padding-left:40px;
+.book a.writer:hover {
+	color:#e44c65;
 }
-#books h3 {
-    float:left;
-    padding-left:40px;
-    padding-top:10px;
+#booklist {
+	width: 360px;
+	float: left;
 }
-#books .wen {
-    float:left;
-    padding-left:40px;
-    padding-top:10px;
-    width:170px;
+#booklist h2 {
+	color: #666;
+	padding-left:10px;
+}
+#hotlist {
+	margin-top: 25px;
+	width:300px;
+	height: 330px;
+	border: 0;
+	background-color: #efeef2;
+	padding-left:30px;
+	padding-right:30px;
+}
+#hotlist li {
+	list-style-type: none;
+	padding-top:3px;
+	padding-bottom:3px;
+	border-bottom: 1px dotted #d5d4d8;
+	line-height: 33px;
+	height: 33px;
+	color:#666;
+}
+#hotlist li a {
+	padding-left:8px;
+	color:#666;
+	transition:color 0.2s ease-in-out;
+}
+#hotlist li a:hover {
+	color:#e44c65;
 }
