--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
 	font-family: 胡晓波男神体;
-	src: url('../font/HuXiaoBoNanShenTi-2.otf');
+	src: url('https://sanqianzzz.github.io/xingchen/font/HuXiaoBoNanShenTi-2.otf');
 }
 * {
 	margin:0;
