--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,9 @@
 	margin:0;
 	padding:0;
 }
+body {
+	background: #fff;
+}
 a {
 	text-decoration:none;
 }
@@ -35,10 +38,10 @@ a {
 	color:black;
 }
 #search input {
-	float:right;
+	position: fixed;
+    top: 25px;
+    right: 75px;
 	transition: 0.12s ease;
-	margin-top:25px;
-	margin-bottom: 25px;
 	outline-style: none;
 	border-radius: 42px;
 	border: 2px solid #2f4f4f;
@@ -157,6 +160,7 @@ div.book {
 	color:#1a1a1a;
 	padding-left:5px;
 	transition:color 0.2s ease-in-out;
+	overflow:hidden;
 }
 .book a.writer:hover {
 	color:#e44c65;
