--- a/css/style.css
+++ b/css/style.css
@@ -201,8 +201,8 @@ div.book {
 }
 #footer {
 	clear: both;
-    background: rgb(220, 220, 220);
-    border-top: 1px solid #f9f9f9;
+    background: rgb(225, 225, 225);
+    border-top: 1px solid rgb(225, 225, 225);
     margin: 30px auto 0;
     font-size: 12px;
     padding-top: 20px;
