--- a/css/style.css
+++ b/css/style.css
@@ -68,18 +68,18 @@ a {
 }
 #list li {
 	list-style-type:none;
-	height: 30px;
-	width:215px;
-	overflow:hidden;
-	text-overflow:elipsis;
-	white-space:nowrap;
 }
 #list li a {
 	text-indent:8px;
-	display: inline-block;
 	color:black;
 	font-size: 14px;
-	width:100%;
+	height: 30px;
+	width:215px;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	display: -webkit-box;
+	-webkit-line-clamp: 1;
+	-webkit-box-orient: vertical;
 	line-height: 30px;
 	background-color: white;
 	transition:background-color 0.1s ease-in-out;
@@ -126,7 +126,11 @@ div.book {
 	padding-top:-5px;
 	padding-left:16px;
 	height: 24px;
-	overflow:hidden;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	display: -webkit-box;
+	-webkit-line-clamp: 1;
+	-webkit-box-orient: vertical;
 }
 .book .name a {
 	color:#1a1a1a;
@@ -141,11 +145,15 @@ div.book {
 .book p.content {
 	text-indent: 2em;
 	color:#666;
-	overflow:hidden;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	display: -webkit-box;
+	-webkit-line-clamp: 4;
+	-webkit-box-orient: vertical;
 	padding-left: 16px;
 	padding-top: 5px;
 	margin-bottom: 5px;
-	height: 84px;
+	height: 60%;
 }
 .book a.kind {
 	color:#1a1a1a;
@@ -160,7 +168,8 @@ div.book {
 	color:#1a1a1a;
 	padding-left:5px;
 	transition:color 0.2s ease-in-out;
-	overflow:hidden;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 .book a.writer:hover {
 	color:#e44c65;
@@ -190,6 +199,11 @@ div.book {
 	line-height: 33px;
 	height: 33px;
 	color:#666;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	display: -webkit-box;
+	-webkit-line-clamp: 1;
+	-webkit-box-orient: vertical;
 }
 #hotlist li a {
 	padding-left:8px;
