--- a/css/style.css
+++ b/css/style.css
@@ -114,10 +114,11 @@ a {
     width: 320px;
     height: 140px;
     margin-right: 20px;
-	display: flex;
+	display: inline-block;
 }
 .book_img {
 	margin-right: 15px;
+	float: left;
 }
 .book_img img {
 	width: 105px;
@@ -126,6 +127,7 @@ a {
 .book_information {
 	height: 140px;
 	width: 200px;
+	float: left;
 }
 .book_information a.name {
 	color: #1a1a1a;
@@ -147,7 +149,31 @@ a {
 	line-height: 1.8em;
     height: 80px;
     overflow: hidden;
-    margin: 5px 0;
+    margin-top:5px;
+}
+.book_footer {
+	height: 31px;
+	padding-top:9px;
+}
+.book_information a.kind {
+	color: #1a1a1a;
+    transition: color 0.2s ease-in-out;
+    display: inline-block;
+	overflow: hidden; 
+	margin-right:5px;
+}
+.book_information a.kind:hover {
+	color: #e44c65;
+}
+.book_information a.writer {
+	color: #1a1a1a;
+    transition: color 0.2s ease-in-out;
+    display: inline-block;
+	overflow: hidden; 
+	margin-left:5px;
+}
+.book_information a.writer:hover {
+	color: #e44c65;
 }
 #booklist {
 	width: 350px;
