--- a/css/style.css
+++ b/css/style.css
@@ -101,13 +101,17 @@ a {
 	margin-top: 40px;
 	height: 400px;
 }
+#bookt2 h2 {
+	color: #666;
+	margin-left:10px;
+}
 #hot {
 	width:760px;
 	float: left;
 }
 #hot h2 {
 	color: #666;
-	padding-left:10px;
+	margin-left:10px;
 }
 .book {
 	margin-top: 25px;
@@ -213,6 +217,106 @@ a {
 }
 #hotlist li a:hover {
 	color:#e44c65;
+}
+#movie-img{
+	width:385px;
+	height:300px;
+	margin-top:25px;
+	margin-right:25px;
+	padding:0px;
+	overflow:hidden;
+	float: left;
+}
+#movie-img2{
+	float:left;
+	width:385px;
+	height:300px;
+	margin:0px;
+	padding:0px;
+	position:relative;
+}
+#flash-pic{
+	width:385px;
+	height:300px;
+	margin:0px;
+	padding:0px;
+}
+.flash-picture img {
+	left:133px;
+	overflow:hidden;
+	position:absolute;	
+	width: 120px;
+    height: 160px; 
+	top:25px;
+}
+#flash_num{
+	list-style:none;	
+	position:absolute;
+	top:240px;
+}
+.click_out{
+	float:left;
+	display:block;
+	margin-left:5px;
+	width:90px;
+	height:30px;
+	background:#333;
+	line-height:30px;	
+	text-align:center;
+	color:#FFF;
+	font-size:16px;
+	font-weight:bold;
+	cursor:pointer;
+	overflow:hidden;
+}	
+ 
+.click_over{
+	float:left;	
+	display:block;
+	margin-left:5px;
+	width:90px;
+	height:30px;
+	background:red;
+	line-height:30px;	
+	text-align:center;
+	color:#FFF;
+	font-size:16px;
+	font-weight:bold;
+	cursor:pointer;
+	overflow:hidden;
+}
+#new {
+	margin-left: 80px;
+	float: left;
+	width:620px;
+	height: 300px;
+    margin-top: 25px;
+}
+.novel {
+	width:280px;
+	height: 140px;
+	margin-right: 30px;
+	float: left;
+}
+.novel h3 {
+	overflow: hidden;
+    height: 35px;
+}
+.novel a {
+	line-height: 35px;
+	color: #1a1a1a;
+	transition:color 0.2s ease-in-out;
+}
+.novel a:hover {
+	color:#e44c65;
+}
+.novel p {
+	text-indent: 2em;
+	font-size: 15px;
+    line-height: 20px;
+    overflow: hidden;
+    height: 103px;
+    color: #666;
 }
 #footer {
 	clear: both;
