--- a/css/book.css
+++ b/css/book.css
@@ -12,7 +12,7 @@
 }
 body {
 	/* background: #fff; */
-    background: url("https://photo.16pic.com/00/93/51/16pic_9351701_b.jpg") no-repeat;
+    background: url("../img/china.jpg") no-repeat;
     background-size:100% 696px;
 }
 a {
