--- a/css/style.css
+++ b/css/style.css
@@ -139,6 +139,7 @@ a {
 .book_img img {
 	width: 105px;
     height: 140px; 
+	box-shadow: 0 1px 6px rgb(0 0 0 / 35%), 0 0 5px #f9f2e9 inset;
 }
 .book_information {
 	height: 140px;
@@ -261,6 +262,7 @@ a {
 	width: 120px;
     height: 160px; 
 	top:25px;
+	box-shadow: 0 1px 6px rgb(0 0 0 / 35%), 0 0 5px #f9f2e9 inset;
 }
 #flash_num{
 	list-style:none;	
@@ -373,6 +375,7 @@ a {
 .first .listimg img {
 	width: 90px;
     height: 120px; 
+	box-shadow: 0 1px 6px rgb(0 0 0 / 35%), 0 0 5px #f9f2e9 inset;
 }
 .first .listinformation {
 	height: 120px;
