--- a/css/chapter.css
+++ b/css/chapter.css
@@ -93,13 +93,13 @@ a {
 }
 #background {
 	position: fixed;
-    top: 60px;
+    top: 0;
     left: 0;
     right: 0;
 	bottom: 0;
 	width:100%;
 	background: url("../img/china.jpg") no-repeat;
-	background-size: 100%;
+	background-size: 100% 100%;
 	z-index: -1;
 }
 #bookcase {
